--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
+black==22.10.0
 cfgv==3.3.1
+click==8.1.3
 distlib==0.3.6
 filelock==3.8.0
 identify==2.5.8
+mypy-extensions==0.4.3
 nodeenv==1.7.0
+pathspec==0.10.2
 platformdirs==2.5.4
 pre-commit==2.20.0
 PyYAML==6.0
 toml==0.10.2
+tomli==2.0.1
 virtualenv==20.16.7
