--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,11 @@ repos:
     - id: black
       language_version: python3.10
       stages: [commit]
+-   repo: https://github.com/pycqa/flake8
+    rev: 5.0.4
+    hooks:
+    - id: flake8
+      stages: [commit]
 -   repo: local
     hooks:
       - id: requirements
