--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,16 @@ cfgv==3.3.1
 click==8.1.3
 distlib==0.3.6
 filelock==3.8.0
+flake8==5.0.4
 identify==2.5.8
+mccabe==0.7.0
 mypy-extensions==0.4.3
 nodeenv==1.7.0
 pathspec==0.10.2
 platformdirs==2.5.4
 pre-commit==2.20.0
+pycodestyle==2.9.1
+pyflakes==2.5.0
 PyYAML==6.0
 toml==0.10.2
 tomli==2.0.1
