--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,15 @@ black==22.10.0
 cfgv==3.3.1
 click==8.1.3
 distlib==0.3.6
+dominate==2.7.0
 filelock==3.8.0
 flake8==5.0.4
+Flask==2.2.2
+Flask-Bootstrap==3.3.7.1
 identify==2.5.8
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 mccabe==0.7.0
 mypy-extensions==0.4.3
 nodeenv==1.7.0
@@ -17,3 +23,5 @@ PyYAML==6.0
 toml==0.10.2
 tomli==2.0.1
 virtualenv==20.16.7
+visitor==0.1.3
+Werkzeug==2.2.2
