--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ flake8==5.0.4
 Flask==2.2.2
 Flask-Bootstrap==3.3.7.1
 Flask-Moment==1.0.5
+Flask-WTF==1.0.1
 identify==2.5.8
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -28,3 +29,4 @@ tomli==2.0.1
 virtualenv==20.16.7
 visitor==0.1.3
 Werkzeug==2.2.2
+WTForms==3.0.1
